# hpc-compose

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  .pa11yci.json  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  _typos.toml  agent-command-policy.json  agent-command-policy.toml  build.rs  deny.toml  hpc-compose-run.sbatch  install.sh  justfile  llms.txt
.config/: wt.toml
.github/: LAUNCH_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: adoption-feedback.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  hpc-compose-lint.yml  release.yml
Formula/: hpc-compose.rb
benches/: plan_render.rs
dev-cluster/: Dockerfile  README.md  cgroup.conf  compose.yaml  entrypoint.sh  otp-sim.sh  pty-run.py  slurm.conf.tmpl  slurmdbd.conf
dev-cluster/specs/: artifacts.yaml  failing-service.yaml  hello.yaml  ignore-policy.yaml  multi-service.yaml  pipeline-dag.yaml  restart-policy.yaml
docs/: book.toml  docker-compose-migration.md  dual-mode-source-sync-design.md  implementation-plan.md  runbook.md  spec-language-features-design.md  spec-reference.md
docs/brand/: README.md
docs/plans/: 2026-07-feature-brainstorm.md
docs/site-guides/: template.md
docs/src/: README.md  SUMMARY.md  agent-command-policy.json  agent-command-safety.md  ai-agent-setup.md  architecture.md  artifacts-and-resume.md  backlog.md  brand-assets.md  cache-management.md  canary-runs.md  ci-integration.md  cli-reference.md  cluster-profiles.md  codex-skill.md  command-families.md  cross-job-rendezvous.md  development-workflow.md  docker-compose-migration.md  evolve.md  example-source.md  examples.md  execution-model.md  exit-codes.md  failure-recovery.md  faq.md  files-and-directories.md  glossary.md  haicore-guide.md  installation.md  json-output-stability.md  llms.txt  local-slurm-dev-cluster.md  migration-v2.md  notebook.md  production-readiness.md  quickstart-demo.cast  quickstart.md  roadmap.md  run-evidence.md  (+15 more)
docs/theme/: custom.css  custom.js  head.hbs  index.hbs
examples/: README.md  app-redis-worker.yaml  array-sweep-lite.yaml  canary-right-size.yaml  cuda-probe.yaml  dask-scheduler-workers.yaml  deps-and-assert.yaml  dev-python-app.yaml  dev-python-smoke.yaml  env-file-base.env  env-file.env  env-file.yaml  eval-harness.yaml  fairseq-preprocess.yaml  flux-nested.yaml  healthcheck-compat.yaml  hf-stage-model.yaml  jupyter.yaml  llama-app.yaml  llama-uv-worker.yaml  llm-curl-workflow-workdir.yaml  llm-curl-workflow.yaml  minimal-batch.yaml  mpi-hello.yaml  mpi-pmix-v4-host-mpi.yaml  multi-node-accelerate.yaml  multi-node-deepspeed.yaml  multi-node-horovod.yaml  multi-node-jax.yaml  multi-node-mpi.yaml  multi-node-partitioned.yaml  multi-node-torchrun.yaml  multi-stage-pipeline.yaml  nccl-tests.yaml  nextflow-bridge.yaml  notify-mail.yaml  pipeline-dag.yaml  postgres-etl.yaml  preemptible-checkpoint.yaml  ray-head-workers.yaml  (+14 more)
examples/app/: main.py
examples/llama-uv-worker/: README.md  worker.py
examples/llm-curl/: .gitignore  README.md  request.json  run-request.sh
examples/models/: README.md
examples/secrets/: hf-token.txt
examples/vllm-uv-worker/: README.md  worker.py
fuzz/: Cargo.toml
fuzz/corpus/spec_parser/: malformed.yaml  minimal.yaml  readiness.yaml  sweep.yaml  unsupported-root-key.yaml
fuzz/fuzz_targets/: spec_parser.rs
man/man1/: hpc-compose-alloc.1  hpc-compose-artifacts.1  hpc-compose-cache-inspect.1  hpc-compose-cache-list.1  hpc-compose-cache-prune.1  hpc-compose-cache.1  hpc-compose-cancel.1  hpc-compose-checkpoints.1  hpc-compose-clean.1  hpc-compose-completions.1  hpc-compose-config.1  hpc-compose-context.1  hpc-compose-debug.1  hpc-compose-dev.1  hpc-compose-diff.1  hpc-compose-docs.1  hpc-compose-doctor-cluster-report.1  hpc-compose-doctor-fabric-smoke.1  hpc-compose-doctor-mpi-smoke.1  hpc-compose-doctor-readiness.1  hpc-compose-doctor.1  hpc-compose-down.1  hpc-compose-evolve.1  hpc-compose-examples-coverage.1  hpc-compose-examples-list.1  hpc-compose-examples-recommend.1  hpc-compose-examples-search.1  hpc-compose-examples.1  hpc-compose-experiment-bundle.1  hpc-compose-experiment-note.1  hpc-compose-experiment-show.1  hpc-compose-experiment-tag.1  hpc-compose-experiment.1  hpc-compose-explain.1  hpc-compose-feedback.1  hpc-compose-germinate.1  hpc-compose-init.1  hpc-compose-inspect.1  hpc-compose-jobs-list.1  hpc-compose-jobs.1  (+47 more)
schema/: hpc-compose-settings.schema.json  hpc-compose.schema.json  schemastore-catalog-entry.json
schema/outputs/: artifacts.schema.json  cache-inspect.schema.json  cache-list.schema.json  cache-prune.schema.json  cancel.schema.json  (+72 more)
scripts/: cluster_smoke.sh  devcluster.sh  devcluster_case.sh  devcluster_case_assert.py  devcluster_collect_evidence.sh  devcluster_e2e.sh  devcluster_local_case.sh  devcluster_otp_e2e.sh  devcluster_remote_e2e.sh  gen_pa11y_urls.py  generate_agent_assets.py  generate_site_guides.py  package_skill.py  remote_gpu_e2e.sh  render_release_notes.py  update_homebrew_formula.py
src/: authoring_diagnostics.rs  cache.rs  cli.rs  cluster.rs  context.rs  diagnostics.rs  docs_search.rs  domain.rs  evolve.rs  examples.rs  exit.rs  init.rs  job.rs  lib.rs  lint.rs  lint_fix.rs  lsp.rs  main.rs  manpages.rs  mpi_util.rs  output.rs  path_util.rs  planner.rs  platform.rs  preflight.rs  prepare.rs  process_probe.rs  progress.rs  readiness_util.rs  redaction.rs  render.rs  rendezvous.rs  runtime_plan.rs  schema.rs  secure_io.rs  shell_quote.rs  spec.rs  spec_error.rs  suggest.rs  term.rs  (+7 more)
tests/: agent_policy.rs  cli.rs  cli_arg_validation.rs  cli_cache.rs  cli_canary_rendezvous.rs  cli_context.rs  cli_dev_workflow.rs  cli_doctor_readiness.rs  cli_exec.rs  cli_exit_codes.rs  cli_feedback.rs  cli_init.rs  cli_jobs.rs  cli_lsp.rs  cli_remote.rs  cli_runtime.rs  cli_spec.rs  cli_sweep.rs  cli_workspace.rs  docs_examples.rs  install_script.rs  public_api.rs  release_metadata.rs
(+132 files in other folders)
