[package]
name = "hpc-compose"
version = "0.1.17"
edition = "2024"
autobins = false
default-run = "hpc-compose"
license = "MIT"
repository = "https://github.com/NicolasSchuler/hpc-compose"
homepage = "https://github.com/NicolasSchuler/hpc-compose"
documentation = "https://nicolasschuler.github.io/hpc-compose/"
readme = "README.md"
description = "Compose-like specs for single-allocation Slurm jobs with Enroot and Pyxis"
keywords = ["slurm", "hpc", "compose", "containers", "enroot"]
categories = ["command-line-utilities", "config"]

[features]
manpage-bin = []

[[bin]]
name = "hpc-compose"
path = "src/main.rs"

[[bin]]
name = "gen-manpages"
path = "src/bin/gen-manpages.rs"
required-features = ["manpage-bin"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4"
flate2 = "1.1.5"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shellexpand = "3.1.1"
tar = "0.4.44"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = "s"
