[package]
name = "hpc-compose"
version = "0.1.28"
edition = "2024"
autobins = false
default-run = "hpc-compose"
license = "MIT"
repository = "https://github.com/NicolasSchuler/hpc-compose"
homepage = "https://github.com/NicolasSchuler/hpc-compose"
documentation = "https://nicolasschuler.github.io/hpc-compose/"
readme = "README.md"
description = "Compose-like specs for single-allocation Slurm jobs across HPC runtime backends"
keywords = ["slurm", "hpc", "compose", "containers", "enroot"]
categories = ["command-line-utilities", "config"]

[features]
manpage-bin = []

[[bin]]
name = "hpc-compose"
path = "src/main.rs"

[[bin]]
name = "gen-manpages"
path = "src/bin/gen-manpages.rs"
required-features = ["manpage-bin"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
flate2 = "1.1.5"
hex = "0.4.3"
indicatif = "0.17"
libc = "0.2.184"
miette = { version = "7", features = ["fancy"] }
owo-colors = "4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
sha2 = "0.11.0"
shellexpand = "3.1.1"
tar = "0.4.44"
thiserror = "2"
toml = "0.8.19"

[dev-dependencies]
proptest = { version = "1.9.0", default-features = false, features = ["std"] }
tempfile = "3.23.0"

[profile.release]
opt-level = "s"

[package.metadata.deb]
maintainer = "Nicolas Schuler"
section = "utility"
priority = "optional"
depends = "$auto"
assets = [
  ["target/release/hpc-compose", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/hpc-compose/README.md", "644"],
  ["man/man1/*.1", "usr/share/man/man1/", "644"],
]

[package.metadata.generate-rpm]
summary = "Compose-like specs for single-allocation Slurm jobs across HPC runtime backends"
assets = [
  { source = "target/release/hpc-compose", dest = "/usr/bin/hpc-compose", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/hpc-compose/README.md", mode = "644", doc = true },
  { source = "man/man1/*.1", dest = "/usr/share/man/man1/", mode = "644", doc = true },
]
require-sh = false
