[package]
name = "hpc-compose"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
autobins = false
default-run = "hpc-compose"
license = "MIT"
repository = "https://github.com/NicolasSchuler/hpc-compose"
homepage = "https://github.com/NicolasSchuler/hpc-compose"
documentation = "https://nicolasschuler.github.io/hpc-compose/"
readme = "README.md"
description = "Compose-like specs for single-allocation Slurm jobs across HPC runtime backends"
keywords = ["slurm", "hpc", "compose", "containers", "enroot"]
categories = ["command-line-utilities", "config"]

[features]
fuzzing = []
manpage-bin = []

[[bin]]
name = "hpc-compose"
path = "src/main.rs"

[[bin]]
name = "gen-manpages"
path = "src/bin/gen-manpages.rs"
required-features = ["manpage-bin"]

[[bench]]
name = "plan_render"
path = "benches/plan_render.rs"
harness = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
# Exact pin: comfy-table's rendered table layout can shift across releases and is
# asserted by the output tests, so bump deliberately and re-check those tests.
# (Cargo.lock pins it regardless; the exact requirement just makes intent explicit.)
comfy-table = "=7.2.2"
crossterm = "0.29"
flate2 = "1.1.5"
hex = "0.4.3"
indicatif = "0.18"
libc = "0.2.186"
lsp-server = "0.8"
lsp-types = "0.97"
miette = { version = "7", features = ["fancy"] }
owo-colors = "4"
regex = "1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
sha2 = "0.11.0"
shellexpand = "3.1.1"
tar = "0.4.46"
thiserror = "2"
toml = "1.1.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
proptest = { version = "1.9.0", default-features = false, features = ["std"] }
tempfile = "3.23.0"

[profile.dev]
# Line tables only: backtraces and test failures keep file:line, but the
# multi-GB full-debuginfo payload across dependency rlibs and the many
# integration-test binaries is dropped. Full debugger sessions are rare enough
# here that the disk and compile-time win dominates.
debug = "line-tables-only"

[profile.release]
opt-level = "s"
strip = "symbols"
# Thin LTO: a low-risk win for both binary size and the compute-bound paths
# (sha2 source hashing, flate2/tar artifact export) without the build-time cost
# of full LTO. Keep opt-level = "s" so the size goal is preserved.
lto = "thin"

[package.metadata.deb]
maintainer = "Nicolas Schuler"
section = "utility"
priority = "optional"
depends = "$auto"
assets = [
  ["target/release/hpc-compose", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/hpc-compose/README.md", "644"],
  ["man/man1/*.1", "usr/share/man/man1/", "644"],
]

[package.metadata.generate-rpm]
summary = "Compose-like specs for single-allocation Slurm jobs across HPC runtime backends"
assets = [
  { source = "target/release/hpc-compose", dest = "/usr/bin/hpc-compose", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/hpc-compose/README.md", mode = "644", doc = true },
  { source = "man/man1/*.1", dest = "/usr/share/man/man1/", mode = "644", doc = true },
]
require-sh = false
